tests/fixtures/invalid/pow_none_none_none.py
# Cannot call pow() with None, None, None
x = pow(None, None, None)
